removing overfow-wrap bug

--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -27,3 +27,7 @@ mat-paginator {
   width: 100%;
   box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
 }
+
+.content-wrap {
+  overflow-wrap: break-word;
+}
